
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.mayuso</groupId>
	<artifactId>JMarkPad</artifactId>
	<packaging>jar</packaging>
	<version>1.2.2</version>
	<name>JMarkPad</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<dependencies>
		<dependency>
		  <groupId>org.openjfx</groupId>
		  <artifactId>javafx-controls</artifactId>
		  <version>17</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>17</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>17</version>
		</dependency>
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.10</version>
		</dependency>
		<dependency>
			<groupId>com.vladsch.flexmark</groupId>
			<artifactId>flexmark</artifactId>
			<version>0.62.2</version>
		</dependency>
		<dependency>
			<groupId>com.vladsch.flexmark</groupId>
			<artifactId>flexmark-util</artifactId>
			<version>0.62.2</version>
		</dependency>
	</dependencies>
	<build>
	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.8.1</version>
			<configuration>
				<release>11</release>
			</configuration>
		</plugin>

		<plugin>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-maven-plugin</artifactId>
			<version>0.0.8</version>
			<configuration>
				<mainClass>ui.Main</mainClass>
				<options>
					<option>--add-opens</option>
					<option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
					<option>--add-opens</option>
					<option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
				</options>
			</configuration>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-shade-plugin</artifactId>
			<version>3.2.4</version>
			<executions>
				<execution>
					<phase>package</phase>
					<goals>
						<goal>shade</goal>
					</goals>
					<configuration>
						<shadedArtifactAttached>true</shadedArtifactAttached>
						<shadedClassifierName>project-classifier</shadedClassifierName>
						<outputFile>target\${project.artifactId}.jar</outputFile>
						<transformers>
							<transformer implementation= "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
								<mainClass>ui.Main</mainClass>
							</transformer>
						</transformers>
					</configuration>
				</execution>
			</executions>
        </plugin>
	</plugins>
	
	</build>
</project>
